# CorrectedTest1

src/: Alien.cpp  Alien.h  Armadura.cpp  Armadura.h  CMakeLists.txt  Guerrero.cpp  Guerrero.h  Humanoide.cpp  Humanoide.h  HumanoideManager.cpp  HumanoideManager.h  Policia.cpp  Policia.h  Predator.cpp  Predator.h  RoboCop.cpp  RoboCop.h  Robot.cpp  Robot.h
tst/: ExamenParcialTest.cpp
